fixed about me text

--- a/index.html
+++ b/index.html
@@ -154,13 +154,17 @@
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving new goals.</em>
-                <br/><br/>
-                I have experience building full stack web applications from scratch with a tight deadline both individually and in teams. I have sound knowledge of many languages and frameworks and I am comfortable with computer science concepts like OOP and recursion, along with different development processes like Behavior Driven Development (BDD) and Test Driven Development (TDD).
-                <br/>
-                  I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. I am also conversant in Italian. <br/>
-                  My successful experience both in a startup in Toronto and in a big international company in Brazil demonstrate my flexibility and capability to adapt quickly to different environments.<br/><br/>
-                  <em>I have the drive and the intelligence to make great things happen.</em>
-               </p>
+              </p>
+              <p>
+                I have experience building full stack web applications from scratch with a tight deadline both individually and in teams. I have sound knowledge of many languages and frameworks.
+              </p>
+              <p>
+                My industrial engineering background is a tool that I use to have a holistic approach to problem solving.
+                Futhermore, I have excellent interpersonal skills and great verbal and written communication in English, Portuguese and Spanish. I am also conversant in Italian.
+              </p>
+              <p>
+                <em>I have the drive and the intelligence to make great things happen.</em>
+              </p>
             </section>
             <section id="experience" class="sect about-me row d-flex mt-5">
               <h2>Experience</h2>
