fixed logo color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="#"><i style="color: #17a2b8" class="fas fa-laptop-code"></i>  Paula Barreto</a>
+      <a class="navbar-brand" href="#"><i style="color: rgba(255,255,255,.5)" class="fas fa-laptop-code"></i>  Paula Barreto</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
