--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <section id="about" class="sect about-me row d-flex mt-4">
               <h2>About Me</h2>
               <div class="w-100"></div>
-              <strong>Full Stack Web Developer | Industrial Engineer </strong>
+              <strong>Software Engineer | Industrial Engineer </strong>
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I am a highly motivated person, a keen and fast learner who loves new challenges and achieving new goals.</em>
@@ -174,7 +174,7 @@
                     <img class="card-img-top card-cap img-fluid" style="height:110px; background-color: white;" src="./docs/td-logo.gif" alt="Card image cap">
                     <div class="card-body">
                       <h5 class="card-title">TD Bank</h5>
-                      <p class="card-text"><em>Software Engineer. </em>
+                      <p class="card-text"><em>Software Engineer </em>
                         <p>
                           Currently working on some of the bank's most modern applications using Angular and Node.js.
                         </p>
@@ -186,7 +186,7 @@
                   </a>
                   <div class="card-body">
                     <h5 class="card-title">iRestify</h5>
-                    <p class="card-text"><em>Full Stack Web Develper. </em>
+                    <p class="card-text"><em>Software Develper </em>
                       <p>
                         Built web applications using Node.js, React.js, Redux and Next.js.
                       </p>
