--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
       </div>
-      <ul class="nav justify-content-end">
+      <!-- <ul class="nav justify-content-end">
         <li class="nav-item" style="margin-right: 5px">
           <a target="_blank" href="./docs/Paula_Barreto_Resume.pdf" download>
             <button
@@ -44,7 +44,7 @@
             </button>
           </a>
         </li>
-      </ul>
+      </ul> -->
     </nav>
 
     <div class="container-fluid">
